added package and cross compilation output dirs
 SVN 5013@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -57,6 +57,8 @@ components/gtk/gtkglarea/tgtkglareacontrol.xpm -text svneol=native#image/x-xpixm
 components/htmllite/html32.res svneol=native#unset
 components/htmllite/htmllite.dcr -text svneol=native#application/x-director
 components/htmllite/htmllite.pas svneol=native#text/pascal
+components/htmllite/lazhtmllite.lpk svneol=native#text/pascal
+components/htmllite/lazhtmllite.pas svneol=native#text/pascal
 components/htmllite/litecons.inc svneol=native#text/pascal
 components/htmllite/litedith.pas svneol=native#text/pascal
 components/htmllite/litegif1.pas svneol=native#text/pascal
