--- a/.gitattributes
+++ b/.gitattributes
@@ -1118,6 +1118,7 @@ tools/apiwizz/apiwizard.lrs svneol=native#text/pascal
 tools/apiwizz/apiwizard.pp svneol=native#text/pascal
 tools/apiwizz/apiwizz.pp svneol=native#text/pascal
 tools/check_ide_libs.sh -text svneol=native#application/x-sh
+tools/copy_po_files_to_lazarus_sources.sh -text svneol=native#application/x-sh
 tools/cvs2cl.pl -text svneol=native#application/x-perl
 tools/install/build_fpc_rpm.sh -text svneol=native#application/x-sh
 tools/install/build_fpcsrc_rpm.sh -text svneol=native#application/x-sh
