--- a/.gitattributes
+++ b/.gitattributes
@@ -31,6 +31,8 @@ components/codetools/languages/codetools.fr.po svneol=native#text/plain
 components/codetools/languages/codetools.it.po svneol=native#text/plain
 components/codetools/languages/codetools.pl.po svneol=native#text/plain
 components/codetools/languages/codetools.po svneol=native#text/plain
+components/codetools/languages/codetools.ru.po svneol=native#text/plain
+components/codetools/languages/codetools.ruwin.po svneol=native#text/plain
 components/codetools/laz_dom.pas svneol=native#text/pascal
 components/codetools/laz_xmlcfg.pas svneol=native#text/pascal
 components/codetools/laz_xmlread.pas svneol=native#text/pascal
@@ -97,12 +99,14 @@ components/synedit/languages/synedit.fr.po svneol=native#text/plain
 components/synedit/languages/synedit.pl.po svneol=native#text/plain
 components/synedit/languages/synedit.po svneol=native#text/plain
 components/synedit/languages/synedit.ru.po svneol=native#text/plain
+components/synedit/languages/synedit.ruwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ca.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.de.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.fr.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.pl.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ru.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.ruwin.po svneol=native#text/plain
 components/synedit/syncompletion.pas svneol=native#text/pascal
 components/synedit/synedit.inc svneol=native#text/pascal
 components/synedit/synedit.pp svneol=native#text/pascal
