--- a/.gitattributes
+++ b/.gitattributes
@@ -790,6 +790,7 @@ images/uparrow.xpm -text svneol=native#image/x-xpixmap
 languages/lazaruside.ca.po svneol=native#text/plain
 languages/lazaruside.de.po svneol=native#text/plain
 languages/lazaruside.es.po svneol=native#text/plain
+languages/lazaruside.fi.po svneol=native#text/plain
 languages/lazaruside.fr.po svneol=native#text/plain
 languages/lazaruside.it.po svneol=native#text/plain
 languages/lazaruside.pl.po svneol=native#text/plain
