fixed typo avglcltree -> avglvltree
 SVN 5105@trunk

--- a/lcl/Makefile.fpc
+++ b/lcl/Makefile.fpc
@@ -13,7 +13,7 @@ units=alllclunits
 implicitunits= \
   actnlist \
   arrow \
-  avglcltree \
+  avglvltree \
   buttons \
   calendar \
   checklst \
