updated finnish translation from Seppo
 SVN 5107@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -27,6 +27,7 @@ components/codetools/identcompletiontool.pas svneol=native#text/pascal
 components/codetools/keywordfunclists.pas svneol=native#text/pascal
 components/codetools/languages/codetools.ca.po svneol=native#text/plain
 components/codetools/languages/codetools.de.po svneol=native#text/plain
+components/codetools/languages/codetools.fi.po svneol=native#text/plain
 components/codetools/languages/codetools.fr.po svneol=native#text/plain
 components/codetools/languages/codetools.it.po svneol=native#text/plain
 components/codetools/languages/codetools.pl.po svneol=native#text/plain
@@ -800,6 +801,7 @@ languages/lazaruside.ruwin.po svneol=native#text/plain
 languages/objinspstrconsts.ca.po svneol=native#text/plain
 languages/objinspstrconsts.de.po svneol=native#text/plain
 languages/objinspstrconsts.es.po svneol=native#text/plain
+languages/objinspstrconsts.fi.po svneol=native#text/plain
 languages/objinspstrconsts.fr.po svneol=native#text/plain
 languages/objinspstrconsts.it.po svneol=native#text/plain
 languages/objinspstrconsts.pl.po svneol=native#text/plain
@@ -1065,6 +1067,7 @@ lcl/intfstrconsts.pas svneol=native#text/pascal
 lcl/languages/lcl.ca.po svneol=native#text/plain
 lcl/languages/lcl.de.po svneol=native#text/plain
 lcl/languages/lcl.es.po svneol=native#text/plain
+lcl/languages/lcl.fi.po svneol=native#text/plain
 lcl/languages/lcl.fr.po svneol=native#text/plain
 lcl/languages/lcl.it.po svneol=native#text/plain
 lcl/languages/lcl.pl.po svneol=native#text/plain
