added sqlitelaz package
 SVN 5113@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -87,6 +87,8 @@ components/mysql/registermysql.lrs svneol=native#text/pascal
 components/mysql/registermysql.pas svneol=native#text/pascal
 components/mysql/tmysqldatabase.xpm -text svneol=native#image/x-xpixmap
 components/mysql/tmysqldataset.xpm -text svneol=native#image/x-xpixmap
+components/sqlite/sqlitelaz.lpk svneol=native#text/pascal
+components/sqlite/sqlitelaz.pas svneol=native#text/pascal
 components/synedit/allsyneditunits.pp svneol=native#text/pascal
 components/synedit/design/tsynautocomplete.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynedit.xpm -text svneol=native#image/x-xpixmap
