added icons for synhighlighter
 SVN 5124@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -91,11 +91,19 @@ components/sqlite/sqlitelaz.lpk svneol=native#text/pascal
 components/sqlite/sqlitelaz.pas svneol=native#text/pascal
 components/synedit/allsyneditunits.pp svneol=native#text/pascal
 components/synedit/design/tsynautocomplete.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsyncppsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynedit.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynexporterhtml.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsynhtmlsyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsynjavasyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsynlfmsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynmacrorecorder.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynmemo.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynmultisyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsynpassyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsynperlsyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsynunixshellscriptsyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsynxmlsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/languages/synedit.ca.po svneol=native#text/plain
 components/synedit/languages/synedit.de.po svneol=native#text/plain
 components/synedit/languages/synedit.fr.po svneol=native#text/plain
