added TSQLite icon
 SVN 5126@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -89,6 +89,9 @@ components/mysql/tmysqldatabase.xpm -text svneol=native#image/x-xpixmap
 components/mysql/tmysqldataset.xpm -text svneol=native#image/x-xpixmap
 components/sqlite/sqlitelaz.lpk svneol=native#text/pascal
 components/sqlite/sqlitelaz.pas svneol=native#text/pascal
+components/sqlite/sqliteresources.lrs svneol=native#text/pascal
+components/sqlite/sqliteresources.pas svneol=native#text/pascal
+components/sqlite/tsqlite.xpm -text svneol=native#image/x-xpixmap
 components/synedit/allsyneditunits.pp svneol=native#text/pascal
 components/synedit/design/tsynautocomplete.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsyncppsyn.xpm -text svneol=native#image/x-xpixmap
