--- a/.gitattributes
+++ b/.gitattributes
@@ -924,6 +924,7 @@ lcl/include/customnotebook.inc svneol=native#text/pascal
 lcl/include/custompage.inc svneol=native#text/pascal
 lcl/include/custompanel.inc svneol=native#text/pascal
 lcl/include/customradiogroup.inc svneol=native#text/pascal
+lcl/include/customsplitter.inc svneol=native#text/pascal
 lcl/include/customstatictext.inc svneol=native#text/pascal
 lcl/include/customupdown.inc svneol=native#text/pascal
 lcl/include/dbcalendar.inc svneol=native#text/pascal
