updated polish translation
 SVN 5177@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -31,6 +31,8 @@ components/codetools/languages/codetools.fi.po svneol=native#text/plain
 components/codetools/languages/codetools.fr.po svneol=native#text/plain
 components/codetools/languages/codetools.it.po svneol=native#text/plain
 components/codetools/languages/codetools.pl.po svneol=native#text/plain
+components/codetools/languages/codetools.pliso.po svneol=native#text/plain
+components/codetools/languages/codetools.plwin.po svneol=native#text/plain
 components/codetools/languages/codetools.po svneol=native#text/plain
 components/codetools/languages/codetools.ru.po svneol=native#text/plain
 components/codetools/languages/codetools.ruwin.po svneol=native#text/plain
@@ -111,6 +113,8 @@ components/synedit/languages/synedit.ca.po svneol=native#text/plain
 components/synedit/languages/synedit.de.po svneol=native#text/plain
 components/synedit/languages/synedit.fr.po svneol=native#text/plain
 components/synedit/languages/synedit.pl.po svneol=native#text/plain
+components/synedit/languages/synedit.pliso.po svneol=native#text/plain
+components/synedit/languages/synedit.plwin.po svneol=native#text/plain
 components/synedit/languages/synedit.po svneol=native#text/plain
 components/synedit/languages/synedit.ru.po svneol=native#text/plain
 components/synedit/languages/synedit.ruwin.po svneol=native#text/plain
@@ -118,6 +122,8 @@ components/synedit/languages/synmacrorecorder.ca.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.de.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.fr.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.pl.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.pliso.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.plwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ru.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ruwin.po svneol=native#text/plain
@@ -810,6 +816,8 @@ languages/lazaruside.fi.po svneol=native#text/plain
 languages/lazaruside.fr.po svneol=native#text/plain
 languages/lazaruside.it.po svneol=native#text/plain
 languages/lazaruside.pl.po svneol=native#text/plain
+languages/lazaruside.pliso.po svneol=native#text/plain
+languages/lazaruside.plwin.po svneol=native#text/plain
 languages/lazaruside.po svneol=native#text/plain
 languages/lazaruside.ru.po svneol=native#text/plain
 languages/lazaruside.ruwin.po svneol=native#text/plain
@@ -820,6 +828,8 @@ languages/objinspstrconsts.fi.po svneol=native#text/plain
 languages/objinspstrconsts.fr.po svneol=native#text/plain
 languages/objinspstrconsts.it.po svneol=native#text/plain
 languages/objinspstrconsts.pl.po svneol=native#text/plain
+languages/objinspstrconsts.pliso.po svneol=native#text/plain
+languages/objinspstrconsts.plwin.po svneol=native#text/plain
 languages/objinspstrconsts.po svneol=native#text/plain
 languages/objinspstrconsts.ru.po svneol=native#text/plain
 languages/objinspstrconsts.ruwin.po svneol=native#text/plain
@@ -1087,6 +1097,8 @@ lcl/languages/lcl.fi.po svneol=native#text/plain
 lcl/languages/lcl.fr.po svneol=native#text/plain
 lcl/languages/lcl.it.po svneol=native#text/plain
 lcl/languages/lcl.pl.po svneol=native#text/plain
+lcl/languages/lcl.pliso.po svneol=native#text/plain
+lcl/languages/lcl.plwin.po svneol=native#text/plain
 lcl/languages/lcl.po svneol=native#text/plain
 lcl/languages/lcl.ru.po svneol=native#text/plain
 lcl/languages/lcl.ruwin.po svneol=native#text/plain
