added package JPEGForLazarus
 SVN 5210@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -82,6 +82,10 @@ components/interbase/tibdatabase.xpm -text svneol=native#image/x-xpixmap
 components/interbase/tibquery.ico -text svneol=unset#image/x-icon
 components/interbase/tibquery.xpm -text svneol=native#image/x-xpixmap
 components/interbase/tibtransaction.xpm -text svneol=native#image/x-xpixmap
+components/jpeg/jpegforlazarus.lpk svneol=native#text/pascal
+components/jpeg/jpegforlazarus.pas svneol=native#text/pascal
+components/jpeg/lazjpeg.pas svneol=native#text/pascal
+components/jpeg/readme.txt svneol=native#text/plain
 components/mpaslex/mpaslex.pp svneol=native#text/pascal
 components/mysql/mysqllaz.lpk svneol=native#text/pascal
 components/mysql/mysqllaz.pas svneol=native#text/pascal
