--- a/examples/gtkglarea/gtkglarea_demo.lpi
+++ b/examples/gtkglarea/gtkglarea_demo.lpi
@@ -1,70 +1,21 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="2"/>
+    <Version Value="3"/>
     <General>
       <ProjectType Value="Program"/>
       <Flags>
         <SaveOnlyProjectUnits Value="True"/>
       </Flags>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="2"/>
+      <ActiveEditorIndexAtStart Value="1"/>
+      <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="gtkglarea_demo"/>
     </General>
-    <JumpHistory Count="12" HistoryIndex="11">
-      <Position1>
-        <Filename Value="exampleform.pp"/>
-        <Caret Line="53" Column="15" TopLine="32"/>
-      </Position1>
-      <Position2>
-        <Filename Value="exampleform.pp"/>
-        <Caret Line="255" Column="33" TopLine="233"/>
-      </Position2>
-      <Position3>
-        <Filename Value="exampleform.pp"/>
-        <Caret Line="44" Column="27" TopLine="32"/>
-      </Position3>
-      <Position4>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/gtk/gtkglarea/gtkglarea.pp"/>
-        <Caret Line="23" Column="56" TopLine="1"/>
-      </Position4>
-      <Position5>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/gtk/gtkglarea/gtkglarea.pp"/>
-        <Caret Line="37" Column="56" TopLine="1"/>
-      </Position5>
-      <Position6>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/gtk/gtkglarea/gtkglarea.pp"/>
-        <Caret Line="84" Column="40" TopLine="45"/>
-      </Position6>
-      <Position7>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/gtk/gtkglarea/gtkglarea.pp"/>
-        <Caret Line="23" Column="47" TopLine="1"/>
-      </Position7>
-      <Position8>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/gtk/gtkglarea/gtkglarea.pp"/>
-        <Caret Line="84" Column="54" TopLine="45"/>
-      </Position8>
-      <Position9>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/gtk/gtkglarea/gtkglarea.pp"/>
-        <Caret Line="83" Column="5" TopLine="45"/>
-      </Position9>
-      <Position10>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/gtk/gtkglarea/gtkglarea.pp"/>
-        <Caret Line="68" Column="23" TopLine="45"/>
-      </Position10>
-      <Position11>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/gtk/gtkglarea/gtkglarea.pp"/>
-        <Caret Line="68" Column="17" TopLine="46"/>
-      </Position11>
-      <Position12>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/gtk/gtkglarea/gtkglarea.pp"/>
-        <Caret Line="69" Column="22" TopLine="51"/>
-      </Position12>
-    </JumpHistory>
     <Units Count="2">
       <Unit0>
-        <CursorPos X="7" Y="26"/>
+        <CursorPos X="15" Y="18"/>
         <EditorIndex Value="0"/>
         <Filename Value="gtkglarea_demo.pp"/>
         <IsPartOfProject Value="True"/>
@@ -74,19 +25,18 @@
         <UsageCount Value="22"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="24" Y="44"/>
+        <CursorPos X="30" Y="629"/>
         <EditorIndex Value="1"/>
         <Filename Value="exampleform.pp"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
-        <TopLine Value="32"/>
+        <TopLine Value="599"/>
         <UnitName Value="ExampleForm"/>
         <UsageCount Value="22"/>
       </Unit1>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
-      <DestinationDirectory Value="$(TestDir)/publishedproject/"/>
       <IgnoreBinaries Value="False"/>
     </PublishOptions>
     <RunParams>
@@ -95,13 +45,22 @@
         <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e bash -i -c '$(TargetCmdLine)'"/>
       </local>
     </RunParams>
+    <RequiredPackages Count="2">
+      <Item1>
+        <PackageName Value="LCL"/>
+      </Item1>
+      <Item2>
+        <PackageName Value="GTKOpenGL"/>
+      </Item2>
+    </RequiredPackages>
   </ProjectOptions>
   <CompilerOptions>
     <SearchPaths>
-      <OtherUnitFiles Value="$(LazarusDir)/lcl/units;$(LazarusDir)/lcl/units/gtk;$(LazarusDir)/components/gtk/gtkglarea"/>
-      <CompilerPath Value="$(CompPath)"/>
       <LCLWidgetType Value="gtk"/>
-      <SrcPath Value="$(LazarusDir)/lcl;$(LazarusDir)/lcl/interfaces/gtk"/>
+      <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/gtk/"/>
     </SearchPaths>
+    <Other>
+      <CompilerPath Value="$(CompPath)"/>
+    </Other>
   </CompilerOptions>
 </CONFIG>
