--- a/.gitattributes
+++ b/.gitattributes
@@ -27,6 +27,7 @@ components/codetools/identcompletiontool.pas svneol=native#text/pascal
 components/codetools/keywordfunclists.pas svneol=native#text/pascal
 components/codetools/languages/codetools.ca.po svneol=native#text/plain
 components/codetools/languages/codetools.de.po svneol=native#text/plain
+components/codetools/languages/codetools.es.po svneol=native#text/plain
 components/codetools/languages/codetools.fi.po svneol=native#text/plain
 components/codetools/languages/codetools.fr.po svneol=native#text/plain
 components/codetools/languages/codetools.it.po svneol=native#text/plain
