--- a/.gitattributes
+++ b/.gitattributes
@@ -83,6 +83,13 @@ components/interbase/tibdatabase.xpm -text svneol=native#image/x-xpixmap
 components/interbase/tibquery.ico -text svneol=unset#image/x-icon
 components/interbase/tibquery.xpm -text svneol=native#image/x-xpixmap
 components/interbase/tibtransaction.xpm -text svneol=native#image/x-xpixmap
+components/jpeg/examples/README.txt svneol=native#text/plain
+components/jpeg/examples/jpegexample.lpi svneol=native#text/plain
+components/jpeg/examples/jpegexample.lpr svneol=native#text/pascal
+components/jpeg/examples/lazarus.jpg -text svneol=unset#image/jpeg
+components/jpeg/examples/mainform.lfm svneol=native#text/plain
+components/jpeg/examples/mainform.lrs svneol=native#text/pascal
+components/jpeg/examples/mainform.pas svneol=native#text/pascal
 components/jpeg/jpegforlazarus.lpk svneol=native#text/pascal
 components/jpeg/jpegforlazarus.pas svneol=native#text/pascal
 components/jpeg/lazjpeg.pas svneol=native#text/pascal
