added sql, php, tex, css synedit highlighter
 SVN 5253@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -109,6 +109,7 @@ components/sqlite/tsqlite.xpm -text svneol=native#image/x-xpixmap
 components/synedit/allsyneditunits.pp svneol=native#text/pascal
 components/synedit/design/tsynautocomplete.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsyncppsyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsyncsssyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynedit.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynexporterhtml.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynhtmlsyn.xpm -text svneol=native#image/x-xpixmap
@@ -119,6 +120,9 @@ components/synedit/design/tsynmemo.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynmultisyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynpassyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynperlsyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsynphpsyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsynsqlsyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/design/tsyntexsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynunixshellscriptsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynxmlsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/languages/synedit.ca.po svneol=native#text/plain
@@ -158,13 +162,18 @@ components/synedit/synedittextbuffer.pp svneol=native#text/pascal
 components/synedit/synedittypes.pp svneol=native#text/pascal
 components/synedit/synexporthtml.pas svneol=native#text/pascal
 components/synedit/synhighlightercpp.pp svneol=native#text/pascal
+components/synedit/synhighlightercss.pas svneol=native#text/pascal
+components/synedit/synhighlighterhashentries.pas svneol=native#text/pascal
 components/synedit/synhighlighterhtml.pp svneol=native#text/pascal
 components/synedit/synhighlighterjava.pas svneol=native#text/pascal
 components/synedit/synhighlighterlfm.pas svneol=native#text/pascal
 components/synedit/synhighlightermulti.pas svneol=native#text/pascal
 components/synedit/synhighlighterpas.pp svneol=native#text/pascal
 components/synedit/synhighlighterperl.pas svneol=native#text/pascal
+components/synedit/synhighlighterphp.pas svneol=native#text/pascal
 components/synedit/synhighlighterposition.pas svneol=native#text/pascal
+components/synedit/synhighlightersql.pas svneol=native#text/pascal
+components/synedit/synhighlightertex.pas svneol=native#text/pascal
 components/synedit/synhighlighterunixshellscript.pas svneol=native#text/pascal
 components/synedit/synhighlighterxml.pas svneol=native#text/pascal
 components/synedit/synmacrorecorder.pas svneol=native#text/pascal
