--- a/.gitattributes
+++ b/.gitattributes
@@ -627,6 +627,7 @@ images/components/tdrawgrid.xpm -text svneol=native#image/x-xpixmap
 images/components/tedit.ico -text svneol=unset#image/x-icon
 images/components/tedit.xpm -text svneol=native#image/x-xpixmap
 images/components/teditbutton.xpm -text svneol=native#image/x-xpixmap
+images/components/tfilelistbox.xpm -text svneol=native#image/x-xpixmap
 images/components/tfilenamedit.xpm -text svneol=native#image/x-xpixmap
 images/components/tfilenameedit.xpm -text svneol=native#image/x-xpixmap
 images/components/tfontdialog.ico -text svneol=unset#image/x-icon
