added package SDFLaz and DBFLaz
 SVN 5305@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -101,6 +101,12 @@ components/mysql/registermysql.lrs svneol=native#text/pascal
 components/mysql/registermysql.pas svneol=native#text/pascal
 components/mysql/tmysqldatabase.xpm -text svneol=native#image/x-xpixmap
 components/mysql/tmysqldataset.xpm -text svneol=native#image/x-xpixmap
+components/sdf/registersdf.lrs svneol=native#text/pascal
+components/sdf/registersdf.pas svneol=native#text/pascal
+components/sdf/sdflaz.lpk svneol=native#text/pascal
+components/sdf/sdflaz.pas svneol=native#text/pascal
+components/sdf/tfixedformatdataset.xpm -text svneol=native#image/x-xpixmap
+components/sdf/tsdfdataset.xpm -text svneol=native#image/x-xpixmap
 components/sqlite/sqlitelaz.lpk svneol=native#text/pascal
 components/sqlite/sqlitelaz.pas svneol=native#text/pascal
 components/sqlite/sqliteresources.lrs svneol=native#text/pascal
@@ -185,6 +191,11 @@ components/synunihighlighter/synuni.pas svneol=native#text/pascal
 components/synunihighlighter/synunidesigner.pas svneol=native#text/pascal
 components/synunihighlighter/synunihighlighter.pas svneol=native#text/pascal
 components/synunihighlighter/synunireg.pas svneol=native#text/pascal
+components/tdbf/dbflaz.lpk svneol=native#text/pascal
+components/tdbf/dbflaz.pas svneol=native#text/pascal
+components/tdbf/registerdbf.lrs svneol=native#text/pascal
+components/tdbf/registerdbf.pas svneol=native#text/pascal
+components/tdbf/tdbf.xpm -text svneol=native#image/x-xpixmap
 components/turbopower_ipro/ipanim.pas svneol=native#text/pascal
 components/turbopower_ipro/ipconst.pas svneol=native#text/pascal
 components/turbopower_ipro/ipdefct.inc svneol=native#text/pascal
