added MemDSLaz package from Michael VC
 SVN 5328@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -94,6 +94,11 @@ components/jpeg/jpegforlazarus.lpk svneol=native#text/pascal
 components/jpeg/jpegforlazarus.pas svneol=native#text/pascal
 components/jpeg/lazjpeg.pas svneol=native#text/pascal
 components/jpeg/readme.txt svneol=native#text/plain
+components/memds/memdslaz.lpk svneol=native#text/pascal
+components/memds/memdslaz.pas svneol=native#text/pascal
+components/memds/registermemds.lrs svneol=native#text/pascal
+components/memds/registermemds.pas svneol=native#text/pascal
+components/memds/tmemdataset.xpm -text svneol=native#image/x-xpixmap
 components/mpaslex/mpaslex.pp svneol=native#text/pascal
 components/mysql/mysqllaz.lpk svneol=native#text/pascal
 components/mysql/mysqllaz.pas svneol=native#text/pascal
