added IDEIntf package and component editors for MemDS
 SVN 5335@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -95,10 +95,12 @@ components/jpeg/jpegforlazarus.lpk svneol=native#text/pascal
 components/jpeg/jpegforlazarus.pas svneol=native#text/pascal
 components/jpeg/lazjpeg.pas svneol=native#text/pascal
 components/jpeg/readme.txt svneol=native#text/plain
+components/memds/frmselectdataset.lfm svneol=native#text/plain
+components/memds/frmselectdataset.lrs svneol=native#text/pascal
+components/memds/frmselectdataset.pp svneol=native#text/pascal
+components/memds/memdsicons.lrs svneol=native#text/pascal
 components/memds/memdslaz.lpk svneol=native#text/pascal
 components/memds/memdslaz.pas svneol=native#text/pascal
-components/memds/registermemds.lrs svneol=native#text/pascal
-components/memds/registermemds.pas svneol=native#text/pascal
 components/memds/tmemdataset.xpm -text svneol=native#image/x-xpixmap
 components/mpaslex/mpaslex.pp svneol=native#text/pascal
 components/mysql/mysqllaz.lpk svneol=native#text/pascal
@@ -1341,6 +1343,7 @@ packager/pkggraphexplorer.pas svneol=native#text/pascal
 packager/pkgmanager.pas svneol=native#text/pascal
 packager/pkgoptionsdlg.pas svneol=native#text/pascal
 packager/registerfcl.pas svneol=native#text/pascal
+packager/registerideintf.pas svneol=native#text/pascal
 packager/registerlcl.pas svneol=native#text/pascal
 packager/registersynedit.pas svneol=native#text/pascal
 packager/registration/lazaruspackageintf.pas svneol=native#text/pascal
