--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -21,8 +21,8 @@ unitdir=lcl/units/$(CPU_TARGET)/$(OS_TARGET) \
         lcl/units/$(CPU_TARGET)/$(OS_TARGET)/$(LCL_PLATFORM) \
         components/units/$(CPU_TARGET)/$(OS_TARGET) \
         components/custom components/mpaslex \
+        ideintf/units/$(CPU_TARGET)/$(OS_TARGET) \
         designer designer/units debugger \
-        ideintf/units \
         packager packager/units/$(CPU_TARGET)/$(OS_TARGET) .
 includedir=debugger designer packager include include/$(OS_TARGET)
 targetdir=.
