--- a/.gitattributes
+++ b/.gitattributes
@@ -1269,6 +1269,7 @@ lcl/intfstrconsts.pas svneol=native#text/pascal
 lcl/languages/lcl.ca.po svneol=native#text/plain
 lcl/languages/lcl.de.po svneol=native#text/plain
 lcl/languages/lcl.es.po svneol=native#text/plain
+lcl/languages/lcl.esutf.po svneol=native#text/plain
 lcl/languages/lcl.fi.po svneol=native#text/plain
 lcl/languages/lcl.fr.po svneol=native#text/plain
 lcl/languages/lcl.it.po svneol=native#text/plain
