fixed range check error and added extgraphics.pas
 SVN 5442@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -904,6 +904,7 @@ lcl/extctrls.pp svneol=native#text/pascal
 lcl/extdlgs.lrs svneol=native#text/pascal
 lcl/extdlgs.pas svneol=native#text/pascal
 lcl/extendedstrings.pas svneol=native#text/pascal
+lcl/extgraphics.pas svneol=native#text/pascal
 lcl/filectrl.pp svneol=native#text/pascal
 lcl/forms.pp svneol=native#text/pascal
 lcl/fpcadds.pas svneol=native#text/pascal
