+ jpeg loading support
 SVN 5445@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1013,6 +1013,7 @@ lcl/include/inputdialog.inc svneol=native#text/pascal
 lcl/include/interfacebase.inc svneol=native#text/pascal
 lcl/include/intfbaselcl.inc svneol=native#text/pascal
 lcl/include/intfbasewinapi.inc svneol=native#text/pascal
+lcl/include/jpg.inc svneol=native#text/pascal
 lcl/include/lclaction.inc svneol=native#text/pascal
 lcl/include/lclintf.inc svneol=native#text/pascal
 lcl/include/lclintfh.inc svneol=native#text/pascal
