added TLazIntfImage example
 SVN 5486@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -366,6 +366,11 @@ examples/gtkglarea/gtkglarea_demo.lpi svneol=native#text/plain
 examples/gtkglarea/gtkglarea_demo.pp svneol=native#text/pascal
 examples/hello.pp svneol=native#text/pascal
 examples/helloform.pp svneol=native#text/pascal
+examples/lazintfimage/fadein1.lpi svneol=native#text/plain
+examples/lazintfimage/fadein1.lpr svneol=native#text/pascal
+examples/lazintfimage/mainunit1.lfm svneol=native#text/plain
+examples/lazintfimage/mainunit1.lrs svneol=native#text/pascal
+examples/lazintfimage/mainunit1.pas svneol=native#text/pascal
 examples/listboxtest.pp svneol=native#text/pascal
 examples/listviewtest.pp svneol=native#text/pascal
 examples/memotest.pp svneol=native#text/pascal
