--- a/.gitattributes
+++ b/.gitattributes
@@ -208,11 +208,13 @@ components/turbopower_ipro/ipanim.pas svneol=native#text/pascal
 components/turbopower_ipro/ipconst.pas svneol=native#text/pascal
 components/turbopower_ipro/ipdefct.inc svneol=native#text/pascal
 components/turbopower_ipro/ipdefine.inc svneol=native#text/pascal
+components/turbopower_ipro/iphtml.lrs svneol=native#text/pascal
 components/turbopower_ipro/iphtml.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtmlpv.pas svneol=native#text/pascal
 components/turbopower_ipro/ipmsg.pas svneol=native#text/pascal
 components/turbopower_ipro/ipstrms.pas svneol=native#text/pascal
 components/turbopower_ipro/iputils.pas svneol=native#text/pascal
+components/turbopower_ipro/tiphtmlpanel.xpm -text svneol=native#image/x-xpixmap
 components/turbopower_ipro/turbopoweripro.lpk svneol=native#text/pascal
 debugger/breakpointsdlg.lfm svneol=native#text/plain
 debugger/breakpointsdlg.lrs svneol=native#text/pascal
