--- a/.gitattributes
+++ b/.gitattributes
@@ -403,6 +403,13 @@ examples/treeview/tv_add_remove.lpi svneol=native#text/plain
 examples/treeview/tv_add_remove_u1.lfm svneol=native#text/plain
 examples/treeview/tv_add_remove_u1.lrs svneol=native#text/pascal
 examples/treeview/tv_add_remove_u1.pas svneol=native#text/pascal
+examples/turbopower_ipro/index.html svneol=native#text/html
+examples/turbopower_ipro/mainunit.lfm svneol=native#text/plain
+examples/turbopower_ipro/mainunit.lrs svneol=native#text/pascal
+examples/turbopower_ipro/mainunit.pas svneol=native#text/pascal
+examples/turbopower_ipro/simplepage2.html svneol=native#text/html
+examples/turbopower_ipro/tpiproexample.lpi svneol=native#text/plain
+examples/turbopower_ipro/tpiproexample.lpr svneol=native#text/pascal
 ide/aboutfrm.lfm svneol=native#text/plain
 ide/aboutfrm.lrs svneol=native#text/pascal
 ide/aboutfrm.pas svneol=native#text/pascal
