implemented OnChange for TRadioButton, TCheckBox, TToggleBox and some more docking stuff
 SVN 5531@trunk

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -34,6 +34,7 @@ files=$(wildcard ./designer/*$(OEXT)) $(wildcard ./designer/*$(PPUEXT)) \
       $(wildcard ./doceditor/*$(OEXT)) $(wildcard ./doceditor/*$(PPUEXT))
 
 [install]
+fpcpackage=n
 basedir=share/lazarus
 
 [dist]
