--- a/.gitattributes
+++ b/.gitattributes
@@ -867,6 +867,7 @@ images/unitdependencies/srctype_unit_22x22.xpm -text svneol=native#image/x-xpixm
 images/unitdependencies/srctype_unknown_22x22.xpm -text svneol=native#image/x-xpixmap
 images/uparrow.ico -text svneol=unset#image/x-icon
 images/uparrow.xpm -text svneol=native#image/x-xpixmap
+install/debian/install.sh -text svneol=native#application/x-sh
 languages/lazaruside.ca.po svneol=native#text/plain
 languages/lazaruside.de.po svneol=native#text/plain
 languages/lazaruside.es.po svneol=native#text/plain
