added hebrew translation  from ik
 SVN 5570@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -873,6 +873,7 @@ languages/lazaruside.de.po svneol=native#text/plain
 languages/lazaruside.es.po svneol=native#text/plain
 languages/lazaruside.fi.po svneol=native#text/plain
 languages/lazaruside.fr.po svneol=native#text/plain
+languages/lazaruside.he.po svneol=native#text/plain
 languages/lazaruside.it.po svneol=native#text/plain
 languages/lazaruside.pl.po svneol=native#text/plain
 languages/lazaruside.pliso.po svneol=native#text/plain
